[gd_scene load_steps=3 format=3 uid="uid://by0hqbc5elxlt"]

[ext_resource type="Script" uid="uid://4f5l6op4yve8" path="res://scripts/RewardChoice/RewardHandlers.gd" id="1_oiyel"]
[ext_resource type="PackedScene" uid="uid://dbtd6w07pf5p5" path="res://scenes/DiceGridScene.tscn" id="2_qkmf1"]

[node name="RewardHandlerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_oiyel")
metadata/_edit_use_anchors_ = true

[node name="addRemoveFace" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.6666667
anchor_top = 0.79012346
anchor_right = 0.9444444
anchor_bottom = 0.8888889
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="AddFace" type="Button" parent="addRemoveFace"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.39999992
anchor_bottom = 1.0000005
disabled = true
text = "Duplicate Face"
metadata/_edit_use_anchors_ = true

[node name="RemoveFace" type="Button" parent="addRemoveFace"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6000001
anchor_right = 1.0000001
anchor_bottom = 1.0000005
disabled = true
text = "Remove Face"
metadata/_edit_use_anchors_ = true

[node name="plusMinusFaceValue" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.6666667
anchor_top = 0.79012346
anchor_right = 0.9444444
anchor_bottom = 0.8888889
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="PlusFace" type="Button" parent="plusMinusFaceValue"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.39999992
anchor_bottom = 1.0000005
disabled = true
text = "+1 Face Value"
metadata/_edit_use_anchors_ = true

[node name="MinusFace" type="Button" parent="plusMinusFaceValue"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6000001
anchor_right = 1.0000001
anchor_bottom = 1.0000005
disabled = true
text = "-1 Face Value"
metadata/_edit_use_anchors_ = true

[node name="duplicateDie" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.6666667
anchor_top = 0.79012346
anchor_right = 0.9444444
anchor_bottom = 0.8888889
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="DuplicateDie" type="Button" parent="duplicateDie"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.000001
disabled = true
text = "Duplicate Die"
metadata/_edit_use_anchors_ = true

[node name="DiceGrid" parent="." instance=ExtResource("2_qkmf1")]
visible = false
layout_mode = 1
gridType = 2

[connection signal="pressed" from="addRemoveFace/AddFace" to="." method="_on_add_face_pressed"]
[connection signal="pressed" from="addRemoveFace/RemoveFace" to="." method="_on_remove_face_pressed"]
[connection signal="pressed" from="plusMinusFaceValue/PlusFace" to="." method="_on_plus_face_pressed"]
[connection signal="pressed" from="plusMinusFaceValue/MinusFace" to="." method="_on_minus_face_pressed"]
[connection signal="pressed" from="duplicateDie/DuplicateDie" to="." method="_on_duplicate_die_pressed"]
